install(FILES 	
    FindArmadillo.cmake
    FindCUDA_advanced.cmake
    FindDCMTK.cmake
    FindFFTW3.cmake
    FindGadgetron.cmake
    FindGLEW.cmake
    FindGMatlab.cmake
    FindGperftools.cmake
    FindMKL.cmake
    FindNumPy.cmake
    FindOctave.cmake
    FindPLplot.cmake
    FindZFP.cmake
    FindBART.cmake
    DESTINATION ${GADGETRON_INSTALL_CMAKE_PATH} COMPONENT main)


