install(FILES 	
    FindArmadillo.cmake
    FindCUDA_advanced.cmake
    FindFFTW3.cmake
    FindGLEW.cmake
    FindGperftools.cmake
    FindMKL.cmake
    FindNumPy.cmake
    FindOctave.cmake
    FindPLplot.cmake
    FindZFP.cmake
    FindCBLAS.cmake
    DESTINATION ${GADGETRON_INSTALL_CMAKE_PATH} COMPONENT main)


