install(FILES 	
    FindArmadillo.cmake
    FindCUDA_advanced.cmake
    FindFFTW3.cmake
    FindGLEW.cmake
    FindGperftools.cmake
    FindMKL.cmake
    FindOctave.cmake
    FindPLplot.cmake
    FindZFP.cmake
    FindCBLAS.cmake
    FindLAPACKE.cmake
    FindPugiXML.cmake
    FindSphinx.cmake
    DESTINATION ${GADGETRON_INSTALL_CMAKE_PATH} COMPONENT main)


