add_subdirectory(examples)
add_subdirectory(debugging)
add_subdirectory(mri_core)
add_subdirectory(interventional_mri)
add_subdirectory(cmr)
add_subdirectory(epi)
add_subdirectory(spiral)
add_subdirectory(grappa)

if (CUDA_FOUND)
  message("Cuda found, compiling gpu accelerated gadgets")
  add_subdirectory(pmri)
  add_subdirectory(radial)
  add_subdirectory(gpu)
else ()
  message("Cuda NOT found, NOT compiling gpu accelerated gadgets")
endif()